Fix blinking when navigating from cart item to PDP.

--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -45,7 +45,7 @@ $mixBackground = true;
             >
                 <a
                     x-element-transition-trigger:product.animate="{
-                        'variantImg': item.product_image.src,
+                        'productImg': item.product_image.src,
                         'title': item.product_name
                     }"
                     :href="item.product_url"
