--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/toolbar.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/templates/product/list/toolbar.phtml
@@ -5,13 +5,18 @@ declare(strict_types=1);
 use Magento\Catalog\Block\Product\ProductList\Toolbar;
 
 /** @var Toolbar $block */
+
+$collection = $block->getCollection();
+
+if (!$collection || !$collection->getSize()) {
+    echo '<div id="selected-filters-mobile" class="shrink-0 grow"></div>';
+    return;
+}
 ?>
 
-<?php if ($block->getCollection()->getSize()): ?>
-    <?php if ($block->getIsBottom()): ?>
-        <?= $block->getPagerHtml() ?>
-    <?php else: ?>
-        <!-- Mobile filters -->
-        <div id="selected-filters-mobile" class="shrink-0 grow"></div>
-    <?php endif ?>
+<?php if ($block->getIsBottom()): ?>
+    <?= $block->getPagerHtml() ?>
+<?php else: ?>
+    <!-- Mobile filters -->
+    <div id="selected-filters-mobile" class="shrink-0 grow"></div>
 <?php endif ?>
