--- a/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
+++ b/app/design/frontend/Satoshi/Hyva/web/satoshi/theme/components/_resizable.scss
@@ -181,7 +181,11 @@
     }
 
     &__bg {
-      @apply absolute z-10 bg-bg-500;
+      @apply absolute z-10 bg-bg-400;
+
+      .resizable--cart & {
+        @apply bg-bg-500;
+      }
 
       inset: calc(var(--bg-extension-unitless) * 1px);
       transform: scale(var(--bg-scale-x), var(--bg-scale-y));
