INTERNAL-411-166; add a missing condition for filters display

--- a/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_LayeredNavigation/templates/layer/view.phtml
@@ -12,8 +12,12 @@ use Satoshi\Theme\Block\Popup;
 /** @var Navigation $block */
 /** @var Escaper $escaper */
 /** @var ViewModelRegistry $viewModels */
-
 /** @var SvgIcons $hyvaicons */
+
+if (!$block->canShowBlock()) {
+    return '';
+}
+
 $hyvaicons = $viewModels->require(SvgIcons::class);
 $sorter = $block->getChildBlock('filter_sort') ?? [];
 
