--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-overlay.phtml
@@ -56,7 +56,7 @@ $title = $block->getData('title');
                     >
                         <?= __('View cart') ?>
                         <span
-                            x-text="`(${cartItems.reduce((total, item) => total + item.qty, 0)})`"
+                            x-text="`(${cartItems.reduce((total, item) => total + Number(item.qty), 0)})`"
                             class="mr-1"
                         ></span>
                     </a>
