--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/form/newsletter.phtml
@@ -60,7 +60,7 @@ $hyvaicons = $viewModels->require(SvgIcons::class);
                 '<?= $escaper->escapeHtml(__('Save')) ?>'"><?= $escaper->escapeHtml(__('Save')) ?></span>
             </button>
             <a class="button button--ghost-primary"
-               href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
+               href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>"
                x-element-transition-trigger
             >
                 <?= $escaper->escapeHtml(__('Go back')) ?>
