INTERNAL-411-174; fix go back btn issue on other places related to account

--- a/app/design/frontend/Satoshi/Hyva/Magento_Downloadable/templates/customer/products/list.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Downloadable/templates/customer/products/list.phtml
@@ -110,9 +110,8 @@ $heroicons = $viewModels->require(HeroiconsOutline::class);
 <?php endif; ?>
 
 <div>
-    <a
-        href="<?= $escaper->escapeUrl($block->getBackUrl()) ?>"
-        class="inline-block w-full md:w-auto text-center bg-primary-500 py-2.5 px-5 secondary rounded-lg text-white"
+    <a class="inline-block w-full md:w-auto text-center bg-primary-500 py-2.5 px-5 secondary rounded-lg text-white"
+       href="<?= $escaper->escapeUrl($block->getUrl('customer/account')) ?>"
         x-element-transition-trigger
     >
         <span><?= $escaper->escapeHtml(__('Go back')) ?></span>
