INTERNAL-411-173; Fix: 'Change Password' btn style

--- a/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Customer/templates/account/dashboard/info.phtml
@@ -63,7 +63,7 @@ $errorMessage = $block->getErrorMessage();
                     href="<?= $escaper->escapeUrl($block->getChangePasswordUrl()) ?>"
                     x-element-transition-trigger
                 >
-                    <?= $escaper->escapeHtml(__('Change Password')) ?>
+                    <?= $escaper->escapeHtml(__('Edit Password')) ?>
                 </a>
             </div>
         </div>
